--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pg-manager",
-  "version": "0.2.2",
-  "description": "Postgres schema manager",
-  "homepage": "https://github.com/fuchsnj/pg-manager",
+  "name": "aitournament-rps-client",
+  "version": "0.1.0",
+  "description": "AiTournament rock paper scissors client SDK",
+  "homepage": "https://aitournament.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fuchsnj/pg-manager.git"
+    "url": "https://github.com/aitournament/rps-client-nodejs"
   },
   "bugs": {
-    "url": "https://github.com/fuchsnj/pg-manager/issues",
+    "url": "https://github.com/aitournament/rps-client-nodejs/issues",
     "email": "fuchsnj@gmail.com"
   },
   "main": "index.js",
